--- a/FEM/fem_analysis.ipynb
+++ b/FEM/fem_analysis.ipynb
@@ -517,8 +517,10 @@
     "# obtain radial average prifile for variance map above\n",
     "radial_map, kp_var = radial_stats(var_map, center=center_mean.tolist(), var=False)\n",
     "print(kp_var.shape)\n",
+    "print(np.argmax(kp_var))\n",
     "_, kp_nonor = radial_stats(var_nonor, center=center_mean.tolist(), var=False)\n",
     "print(kp_nonor.shape)\n",
+    "print(np.argmax(kp_nonor))\n",
     "\n",
     "fig, ax = plt.subplots(1, 5, figsize=(15, 3))\n",
     "ax[0].imshow(radial_map, cmap=\"gray\")\n",
@@ -619,22 +621,6 @@
    "source": [
     "radial_var = radial_var_stack.copy()\n",
     "radial_var_spectrum = radial_var_sum.copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# angular correlation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
    ]
   },
   {
@@ -743,7 +729,313 @@
     "        temp_ind = np.where(angle_diff==ang)\n",
     "        corr_val_total[int(ang)] = np.mean(corr_values[temp_ind]) - int_sqavg\n",
     "\n",
-    "    return corr_val_total, (corr_val_total / int_sqavg)"
+    "    return (corr_val_total / int_sqavg), corr_val_total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# rotational symmetry evaluation directly from DPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_range = np.arange(25, 30, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.process_time()\n",
+    "flatten_k = []\n",
+    "for k in k_range:\n",
+    "    temp = []\n",
+    "    for i in range(cr_shape[0]):\n",
+    "        for j in range(cr_shape[1]):\n",
+    "            angle_map, angle_sel, value_sel = point_circle(stack_4d_cropped[i, j], k, center=center_mean.tolist())\n",
+    "            angle_range = np.arange(0, 361, 1)\n",
+    "            flat_val = np.zeros(angle_range.shape)\n",
+    "            uni_angle = np.unique(angle_sel)\n",
+    "            for ang in uni_angle:\n",
+    "                temp_ind = np.where(angle_sel==ang)\n",
+    "                flat_val[int(ang)] = value_sel[temp_ind]\n",
+    "            temp.append(flat_val)     \n",
+    "    flatten_k.append(temp)\n",
+    "    print(\"%d radius completed\"%(k))\n",
+    "    print(\"%d seconds have passed\"%(time.process_time()-start_time))\n",
+    "print(\"all done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flatten_k = np.asarray(flatten_k).reshape(len(k_range), cr_shape[0], cr_shape[1], -1)\n",
+    "print(flatten_k.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib qt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flatk_fft = np.abs(np.fft.fft(flatten_k))\n",
+    "print(flatk_fft.shape)\n",
+    "flatk_fft_sum = np.sum(flatk_fft, axis=(1, 2))\n",
+    "print(flatk_fft_sum.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flatk_ps = periodogram(flatten_k)[1]\n",
+    "print(flatk_ps.shape)\n",
+    "flatk_ps_sum = np.sum(flatk_ps, axis=(1, 2))\n",
+    "print(flatk_ps_sum.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 2, figsize=(5, 10))\n",
+    "ax1 = ax[0].imshow(np.flip(flatk_fft_sum[:, 1:11].T, 0), cmap=\"afmhot\", \n",
+    "                   extent=[k_range[0], k_range[-1], 0.5, 10.5], aspect=5, \n",
+    "                   vmax=np.percentile(flatk_fft_sum, 95))\n",
+    "ax2 = ax[1].imshow(np.flip(flatk_ps_sum[:, 1:11].T, 0), cmap=\"afmhot\", \n",
+    "                   extent=[k_range[0], k_range[-1], 0.5, 10.5], aspect=5, \n",
+    "                   vmax=np.percentile(flatk_ps_sum, 95))\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_selected = 27\n",
+    "k_ind = np.where(k_range==k_selected)[0][0]\n",
+    "print(k_ind)\n",
+    "rot_sym = [2, 3, 4, 5, 6, 10]\n",
+    "\n",
+    "flatk_rot = []\n",
+    "for r in rot_sym:\n",
+    "    flatk_rot.append(flatk_fft[k_ind, :, :, r]/np.max(flatk_fft[k_ind, :, :, r]))\n",
+    "flatk_rot = np.asarray(flatk_rot)\n",
+    "print(flatk_rot.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_var_map = radial_var[:, :, k_selected]\n",
+    "for i, r in enumerate(rot_sym):\n",
+    "    fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "    ax[0].imshow(flatk_rot[i], cmap=\"afmhot\")\n",
+    "    ax[0].axis(\"off\")\n",
+    "    ax[0].set_title(\"rotation symmetry %d\"%r)\n",
+    "    ax[1].imshow(k_var_map, cmap=\"afmhot\")\n",
+    "    ax[1].axis(\"off\")\n",
+    "    ax[2].imshow(flatk_rot[i], cmap=\"afmhot\", alpha=0.8)\n",
+    "    ax[2].contour(k_var_map, colors=\"k\", alpha=1.0, levels=5)\n",
+    "    ax[2].axis(\"off\")\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked = radial_var[:, :, k_selected:(k_selected+1)]\n",
+    "masked = masked / np.max(masked)\n",
+    "\n",
+    "p1_list = np.arange(50, 96, 1)\n",
+    "p2 = 99.00\n",
+    "v2 = np.percentile(masked, p2)\n",
+    "xcorr_val = []\n",
+    "mse_val = []\n",
+    "ssim_val = []\n",
+    "\n",
+    "for i, r in enumerate(rot_sym):\n",
+    "    tmp_xcorr = []\n",
+    "    tmp_mse = []\n",
+    "    tmp_ssim = []\n",
+    "    for p1 in p1_list:\n",
+    "        v1 = np.percentile(masked, p1)\n",
+    "        bool_img = masked.copy()\n",
+    "        bool_img[np.where(masked < v1)] = 0\n",
+    "        bool_img[np.where(masked > v2)] = 0\n",
+    "        cluster_img = np.sum(bool_img, axis=2)\n",
+    "        cluster_img = cluster_img / np.max(cluster_img)\n",
+    "\n",
+    "        tmp_xcorr.append(np.correlate(flatk_rot[i].flatten(), cluster_img.flatten()))\n",
+    "        tmp_mse.append(mean_squared_error(flatk_rot[i], cluster_img))\n",
+    "        tmp_ssim.append(ssim(flatk_rot[i], cluster_img))\n",
+    "        \"\"\"\n",
+    "        fig, ax = plt.subplots(1, 1, figsize=(8, 4))\n",
+    "        ax.imshow(ang_corr_k_sum, cmap=\"afmhot\", alpha=0.8)\n",
+    "        ax.axis(\"off\")\n",
+    "        ax.contour(cluster_img, colors=\"k\", alpha=1.0, levels=1)\n",
+    "        ax.set_title(\"%.2f%% percent to 99.99%%\\nxcorr=%d, mse=%.4f, ssim=%.4f\"%(p1, xcorr_val[-1], mse_val[-1], ssim_val[-1]))\n",
+    "        ax.axis(\"off\")    \n",
+    "        fig.tight_layout()\n",
+    "        plt.show()\n",
+    "        \"\"\"\n",
+    "    xcorr_val.append(tmp_xcorr)\n",
+    "    mse_val.append(tmp_mse)\n",
+    "    ssim_val.append(tmp_ssim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, r in enumerate(rot_sym):\n",
+    "    fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "    ax[0].plot(p1_list, xcorr_val[i], \"k-\")\n",
+    "    ax[0].grid()\n",
+    "    ax[1].plot(p1_list, mse_val[i], \"k-\")\n",
+    "    ax[1].grid()\n",
+    "    ax[1].set_title(\"rotation symmetry %d\"%r)\n",
+    "    ax[2].plot(p1_list, ssim_val[i], \"k-\")\n",
+    "    ax[2].grid()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flatk_sum_rot = np.sum(flatk_fft[k_ind, :, :, rot_sym], axis=0)\n",
+    "flatk_sum_rot = flatk_sum_rot / np.max(flatk_sum_rot)\n",
+    "print(flatk_sum_rot.shape)\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "ax[0].imshow(flatk_sum_rot, cmap=\"afmhot\")\n",
+    "ax[0].axis(\"off\")\n",
+    "ax[1].imshow(k_var_map, cmap=\"afmhot\")\n",
+    "ax[1].axis(\"off\")\n",
+    "ax[2].imshow(flatk_sum_rot, cmap=\"afmhot\", alpha=0.8)\n",
+    "ax[2].contour(k_var_map, colors=\"k\", alpha=1.0, levels=5)\n",
+    "ax[2].axis(\"off\")\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked = radial_var[:, :, k_selected:(k_selected+1)]\n",
+    "masked = masked / np.max(masked)\n",
+    "\n",
+    "p1_list = np.arange(50, 96, 1)\n",
+    "p2 = 99.00\n",
+    "v2 = np.percentile(masked, p2)\n",
+    "xcorr_val = []\n",
+    "mse_val = []\n",
+    "ssim_val = []\n",
+    "\n",
+    "for p1 in p1_list:\n",
+    "    v1 = np.percentile(masked, p1)\n",
+    "    bool_img = masked.copy()\n",
+    "    bool_img[np.where(masked < v1)] = 0\n",
+    "    bool_img[np.where(masked > v2)] = 0\n",
+    "    cluster_img = np.sum(bool_img, axis=2)\n",
+    "    cluster_img = cluster_img / np.max(cluster_img)\n",
+    "    \n",
+    "    xcorr_val.append(np.correlate(flatk_sum_rot.flatten(), cluster_img.flatten()))\n",
+    "    mse_val.append(mean_squared_error(flatk_sum_rot, cluster_img))\n",
+    "    ssim_val.append(ssim(flatk_sum_rot, cluster_img))\n",
+    "    \n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(8, 4))\n",
+    "    ax.imshow(flatk_sum_rot, cmap=\"afmhot\", alpha=0.8)\n",
+    "    ax.axis(\"off\")\n",
+    "    ax.contour(cluster_img, colors=\"k\", alpha=1.0, levels=5)\n",
+    "    ax.set_title(\"%.2f%% percent to 99.99%%\\nxcorr=%d, mse=%.4f, ssim=%.4f\"%(p1, xcorr_val[-1], mse_val[-1], ssim_val[-1]))\n",
+    "    ax.axis(\"off\")    \n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "ax[0].plot(p1_list, xcorr_val, \"k-\")\n",
+    "ax[0].grid()\n",
+    "ax[1].plot(p1_list, mse_val, \"k-\")\n",
+    "ax[1].grid()\n",
+    "ax[2].plot(p1_list, ssim_val, \"k-\")\n",
+    "ax[2].grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# angular correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -755,8 +1047,6 @@
     "start_time = time.process_time()\n",
     "angular_corr_nor = []\n",
     "angular_corr_nonor = []\n",
-    "angle_range = np.arange(0, 361, 1)\n",
-    "k_range = np.arange(25, 26, 1)\n",
     "print(k_range.shape)\n",
     "for k in k_range:\n",
     "    temp = []\n",
@@ -780,7 +1070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angular_corr = angular_corr_nonor"
+    "angular_corr = angular_corr_nor"
    ]
   },
   {
