--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -1,9 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "adjusted-visiting",
+   "metadata": {},
+   "source": [
+    "<h2>Virtual Imaging Techniques for 4D-STEM data (GPU version)</h2>\n",
+    "<strong>Jinseok Ryu, Ingyu Yoo<br></strong>\n",
+    "<strong>Electron Microscopy and Spectroscopy Lab.<br></strong>\n",
+    "<strong>Department of Materials Science and Engineering<br></strong>\n",
+    "<strong>Seoul National University<br><br></strong>\n",
+    "\n",
+    "<strong>last update : 20210617</strong>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "black-struggle",
+   "id": "particular-conversion",
    "metadata": {
     "scrolled": true
    },
@@ -11,14 +25,17 @@
    "source": [
     "import numpy as np\n",
     "from scipy import optimize\n",
+    "from scipy.ndimage import zoom\n",
     "import torch\n",
     "\n",
     "class sstem_python():\n",
     "    \n",
-    "    def __init__(self, f_stack):\n",
+    "    def __init__(self, f_stack, ang_per_pixel, mrad_per_pixel):\n",
     "        self.original_stack = f_stack\n",
     "        self.original_shape = f_stack.shape\n",
     "        self.original_pacbed = np.mean(self.original_stack, axis=(0, 1))\n",
+    "        self.ang_per_pixel = ang_per_pixel\n",
+    "        self.mrad_per_pixel = mrad_per_pixel\n",
     "        \n",
     "        print(\"the shape of the data =\", self.original_shape)\n",
     "        \n",
@@ -60,8 +77,12 @@
     "        max_ind = np.unravel_index(np.argmax(grad_map, axis=None), grad_map.shape)\n",
     "        self.least_R = ((max_ind[0]-self.ct[0])**2 + (max_ind[1]-self.ct[1])**2)**(1/2)\n",
     "        \n",
+    "        print(\"radius of the BF disk = %.2f mrad\"%(self.mrad_per_pixel*self.least_R))\n",
+    "        \n",
     "        self.ct_ind  = np.around(self.ct).astype(int) #np.int\n",
     "        self.cropped_size = np.around(self.least_R + buffer_size).astype(int) #np.int\n",
+    "        \n",
+    "        print(\"radius of the RoI = %.2f mrad\"%(self.mrad_per_pixel*self.cropped_size))\n",
     "        \n",
     "        if self.cropped_size > self.ct_ind[0] or self.cropped_size > self.ct_ind[1]:\n",
     "            self.cropped_size = np.min(ct_ind)\n",
@@ -72,16 +93,16 @@
     "        self.c_shape = self.c_stack.shape\n",
     "        self.c_pacbed = np.mean(self.c_stack, axis=(0, 1))\n",
     "        \n",
-    "    def virtual_stem(self, BF, ADF, mrad_per_pixel=1):\n",
-    "        self.BF_detector = radial_indices(self.original_pacbed.shape, BF, mrad_per_pixel, center=self.ct)\n",
+    "    def virtual_stem(self, BF, ADF):\n",
+    "        self.BF_detector = radial_indices(self.original_pacbed.shape, BF, self.mrad_per_pixel, center=self.ct)\n",
     "        self.BF_stem = np.sum(np.multiply(self.original_stack, self.BF_detector), axis=(2, 3))\n",
     "        \n",
-    "        self.ADF_detector = radial_indices(self.original_pacbed.shape, ADF, mrad_per_pixel, center=self.ct)\n",
+    "        self.ADF_detector = radial_indices(self.original_pacbed.shape, ADF, self.mrad_per_pixel, center=self.ct)\n",
     "        self.ADF_stem = np.sum(np.multiply(self.original_stack, self.ADF_detector), axis=(2, 3))\n",
     "        \n",
-    "    def symmetry_evaluation(self, angle, also_mirror=False):\n",
+    "    def symmetry_evaluation(self, angle, resampling=1, also_mirror=False):\n",
     "        \"\"\"\n",
-    "        Krajnak, M. and J. Etheridge, A symmetry-derived mechanism for atomic resolution imaging. Proc Natl Acad Sci U S A, 2020. 117(45): p. 27805-27810.\n",
+    "        Krajnak, M. and J. Etheridge, Proc Natl Acad Sci U S A, 2020. 117(45): p. 27805-27810.\n",
     "        \"\"\"\n",
     "        rotation_stack = []\n",
     "        r_correl = np.zeros(self.original_shape[:2])\n",
@@ -92,7 +113,7 @@
     "        for i in range(self.original_shape[0]):\n",
     "            for j in range(self.original_shape[1]):\n",
     "                tmp_dp = self.c_stack[i,j,:,:].copy()\n",
-    "                newdata = rotation(tmp_dp, self.c_ct, angle, torch_device=self.cuda_device)\n",
+    "                newdata = rotation(tmp_dp, self.c_ct, angle, resampling, torch_device=self.cuda_device)\n",
     "                newdata = np.multiply(newdata, ri)\n",
     "                rotation_stack.append(newdata)\n",
     "                r_correl[i,j] = correlation(tmp_dp/np.max(tmp_dp), newdata)\n",
@@ -104,8 +125,9 @@
     "        \n",
     "        return rotation_stack, r_correl, m_correl\n",
     "    \n",
-    "    def DPC(self, correct_rotation=True, n_theta=1000, hpass=0.0, lpass=0.0):\n",
+    "    def DPC(self, correct_rotation=True, n_theta=100, hpass=0.0, lpass=0.0):\n",
     "        \"\"\"\n",
+    "        Close, R., et al., Ultramicroscopy, 2015. 159 Pt 1: p. 124-37.\n",
     "        Hachtel, J.A., J.C. Idrobo, and M. Chi, Adv Struct Chem Imaging, 2018. 4(1): p. 10. (https://github.com/hachteja/GetDPC)\n",
     "        Ishizuka, A., et al., Microscopy (Oxf), 2017. 66(6): p. 397-405.\n",
     "        Savitzky, B.H., et al., arXiv preprint arXiv:2003.09523, 2020. (https://github.com/py4dstem/py4DSTEM)\n",
@@ -149,7 +171,8 @@
     "        \n",
     "        self.potential = get_icom(self.ysh, self.xsh, hpass, lpass)\n",
     "\n",
-    "        \n",
+    "#####################################################################################\n",
+    "# https://scipy-cookbook.readthedocs.io/items/FittingData.html\n",
     "def gaussian(height, center_x, center_y, width_x, width_y):\n",
     "    \"\"\"Returns a gaussian function with the given parameters\"\"\"\n",
     "    width_x = float(width_x)\n",
@@ -180,6 +203,7 @@
     "                                 data)\n",
     "    p, success = optimize.leastsq(errorfunction, params)\n",
     "    return p\n",
+    "#####################################################################################\n",
     "\n",
     "def radial_indices(shape, radial_range, scale, center=None):\n",
     "    y, x = np.indices(shape)\n",
@@ -207,10 +231,16 @@
     "\n",
     "    return correlation[0]\n",
     "\n",
-    "def rotation(data, center, angle, torch_device=None):\n",
+    "def rotation(data, center, angle, resampling=1, torch_device=None):\n",
     "    #Use crop image #Input : 2d data, angle(degree) /return : 2d data\n",
-    "    angle = angle * np.pi/180\n",
     "    newdata = np.zeros(data.shape)\n",
+    "    center = np.array(center)\n",
+    "    \n",
+    "    if resampling != 1:\n",
+    "        data = zoom(data, resampling, mode=\"nearest\")\n",
+    "        center *= resampling\n",
+    "        \n",
+    "    angle = angle * np.pi/180\n",
     "    alpha, beta = np.cos(angle), np.sin(angle)\n",
     "    \n",
     "    M = np.array([[alpha, beta, (1-alpha)*center[1]-beta*center[0]], \n",
@@ -229,17 +259,15 @@
     "        ind_stack = torch.from_numpy(ind_stack)\n",
     "        ind_stack = ind_stack.to(torch_device)\n",
     "    \n",
-    "    transformed_ind = M @ ind_stack\n",
+    "    transformed_ind = M @ ind_stack / resampling\n",
     "    if torch_device != None:\n",
     "        transformed_ind = transformed_ind.cpu().numpy()\n",
     "    transformed_ind = np.around(transformed_ind.squeeze()).astype(int)\n",
-    "    transformed_ind[np.where(transformed_ind>=np.max(data.shape))] = 0\n",
+    "    transformed_ind = transformed_ind.reshape(-1, 2)\n",
+    "    transformed_ind[np.where(transformed_ind>=np.min(newdata.shape))] = 0\n",
     "    transformed_ind[np.where(transformed_ind<0)] = 0\n",
     "    \n",
-    "    transformed_y = transformed_ind[:, :, 0].flatten()\n",
-    "    transformed_x = transformed_ind[:, :, 1].flatten()\n",
-    "    \n",
-    "    newdata[transformed_y, transformed_x] = data.flatten()\n",
+    "    newdata[transformed_ind[:, 0], transformed_ind[:, 1]] = data.flatten()\n",
     "                \n",
     "    return newdata/np.max(newdata)\n",
     "\n",
@@ -279,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vulnerable-saudi",
+   "id": "miniature-genre",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "differential-employee",
+   "id": "corresponding-selection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "piano-process",
+   "id": "terminal-cursor",
    "metadata": {
     "scrolled": true
    },
@@ -320,11 +348,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rolled-passenger",
+   "id": "exempt-worthy",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = sstem_python(f_stack)\n",
+    "f_stack = f_stack[150:250, 150:250]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "valuable-efficiency",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = sstem_python(f_stack, 1, 1)\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(test.original_pacbed, cmap=\"jet\")\n",
@@ -335,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "central-sauce",
+   "id": "infrared-highway",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "focused-conflict",
+   "id": "productive-nevada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,14 +413,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spare-attachment",
+   "id": "balanced-protocol",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BF_det = [0, int(test.least_R)]\n",
-    "ADF_det = [test.cropped_size, test.original_pacbed.shape[0]]\n",
+    "BF_det = [0, 25]\n",
+    "ADF_det = [50, 80]\n",
     "mrad_per_pixel = 1\n",
-    "test.virtual_stem(BF_det, ADF_det, mrad_per_pixel)\n",
+    "test.virtual_stem(BF_det, ADF_det)\n",
     "\n",
     "fig, ax = plt.subplots(2, 2, figsize=(10, 10))\n",
     "ax[0][0].imshow(test.original_pacbed, cmap=\"jet\")\n",
@@ -406,11 +444,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "demonstrated-comment",
+   "id": "chicken-strip",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.DPC(correct_rotation=True, n_theta=1000)\n",
+    "test.DPC(correct_rotation=True, n_theta=100, hpass=0.01, lpass=0.01)\n",
     "\n",
     "print(\"optimized angle =\", test.c_theta*180/np.pi)\n",
     "fig, ax = plt.subplots(1, 4, figsize=(28, 7))\n",
@@ -420,7 +458,7 @@
     "ax[1].axis(\"off\")\n",
     "ax[2].imshow(test.E_field_x, cmap=\"gray\")\n",
     "ax[2].axis(\"off\")\n",
-    "ax[3].imshow(test.E_mag, cmap=\"viridis\")\n",
+    "ax[3].imshow(test.E_mag, cmap=\"inferno\")\n",
     "ax[3].axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -429,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unlike-couple",
+   "id": "lesbian-constant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,10 +478,10 @@
     "ax[0].quiver(RX.flatten(), RY.flatten(), test.E_field_x.flatten(), test.E_field_y.flatten(), color=cm.jet(mcolors.Normalize()(test.E_mag.flatten())))\n",
     "ax[0].axis(\"off\")\n",
     "#ax[1].imshow(test.ADF_stem, cmap=\"gray\")\n",
-    "ax[1].imshow(test.charge_density, cmap=\"jet\")\n",
+    "ax[1].imshow(test.charge_density, cmap=\"RdBu_r\")\n",
     "ax[1].axis(\"off\")\n",
     "#ax[2].imshow(test.ADF_stem, cmap=\"gray\")\n",
-    "ax[2].imshow(test.potential, cmap=\"jet\")\n",
+    "ax[2].imshow(test.potential, cmap=\"RdBu_r\")\n",
     "ax[2].axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -452,11 +490,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "packed-expert",
+   "id": "annual-idaho",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotated_pacbed = rotation(test.c_pacbed, test.c_ct, test.c_theta*180/np.pi, torch_device=test.cuda_device)\n",
+    "rotated_pacbed = rotation(test.c_pacbed, test.c_ct, test.c_theta*180/np.pi, 2, torch_device=test.cuda_device)\n",
     "ri = radial_indices(test.c_pacbed.shape, [0, test.cropped_size], 1, center=test.c_ct)\n",
     "mirror_plane = np.zeros(rotated_pacbed.shape)\n",
     "mirror_plane[:, test.c_ct[1]] = 1\n",
@@ -474,12 +512,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "finished-victim",
+   "id": "hazardous-debate",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rot_angle = 10\n",
-    "rotated_stack, rot_sym_img, mir_sym_img = test.symmetry_evaluation(rot_angle, also_mirror=True)\n",
+    "start = time.process_time()\n",
+    "rot_angle = 45\n",
+    "rotated_stack, rot_sym_img, mir_sym_img = test.symmetry_evaluation(rot_angle, resampling=2, also_mirror=True)\n",
+    "print(\"%d seconds have passed\"%(time.process_time()-start))\n",
     "f, a = plt.subplots(1,2, figsize=(10,5))\n",
     "a[0].imshow(rot_sym_img, cmap=\"afmhot\")\n",
     "a[0].set_title(\"Rotation angle: {}\".format(rot_angle))\n",
@@ -493,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patent-looking",
+   "id": "large-chase",
    "metadata": {},
    "outputs": [],
    "source": [
