--- a/FEM/fem_analysis.ipynb
+++ b/FEM/fem_analysis.ipynb
@@ -215,8 +215,10 @@
     "\n",
     "# load a data (RAW)\n",
     "stack_4d = load_binary_4D_stack(raw_adr, datatype, o_shape, f_shape, log_scale=False)\n",
-    "if np.isnan(stack_4d):\n",
+    "if np.isnan(np.max(stack_4d)):\n",
+    "    print(\"NaN exists\")\n",
     "    stack_4d = np.nan_to_num(stack_4d)\n",
+    "stack_4d = stack_4d.clip(min=0.0)\n",
     "print(np.max(stack_4d))\n",
     "print(np.min(stack_4d))\n",
     "print(np.mean(stack_4d))"
@@ -236,6 +238,10 @@
     "print(f_shape)\n",
     "\n",
     "stack_4d = stack_4d / np.max(stack_4d)\n",
+    "if np.isnan(np.max(stack_4d)):\n",
+    "    print(\"NaN exists\")\n",
+    "    stack_4d = np.nan_to_num(stack_4d)\n",
+    "stack_4d = stack_4d.clip(min=0.0)\n",
     "print(np.max(stack_4d))\n",
     "print(np.min(stack_4d))\n",
     "print(np.mean(stack_4d))"
@@ -1613,7 +1619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
