--- a/imaging/virtual_imaging_4D_STEM_GPU.ipynb
+++ b/imaging/virtual_imaging_4D_STEM_GPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "adjusted-visiting",
+   "id": "circular-fishing",
    "metadata": {},
    "source": [
     "<h2>Virtual Imaging Techniques for 4D-STEM data (GPU version)</h2>\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "particular-conversion",
+   "id": "junior-landing",
    "metadata": {
     "scrolled": true
    },
@@ -127,9 +127,8 @@
     "    \n",
     "    def DPC(self, correct_rotation=True, n_theta=100, hpass=0.0, lpass=0.0):\n",
     "        \"\"\"\n",
-    "        Close, R., et al., Ultramicroscopy, 2015. 159 Pt 1: p. 124-37.\n",
     "        Hachtel, J.A., J.C. Idrobo, and M. Chi, Adv Struct Chem Imaging, 2018. 4(1): p. 10. (https://github.com/hachteja/GetDPC)\n",
-    "        Ishizuka, A., et al., Microscopy (Oxf), 2017. 66(6): p. 397-405.\n",
+    "        Lazic, I., E.G.T. Bosch, and S. Lazar, Ultramicroscopy, 2016. 160: p. 265-280.\n",
     "        Savitzky, B.H., et al., arXiv preprint arXiv:2003.09523, 2020. (https://github.com/py4dstem/py4DSTEM)\n",
     "        \"\"\"\n",
     "        \n",
@@ -307,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "miniature-genre",
+   "id": "thirty-mixture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corresponding-selection",
+   "id": "bibliographic-terminology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "terminal-cursor",
+   "id": "younger-wrestling",
    "metadata": {
     "scrolled": true
    },
@@ -348,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exempt-worthy",
+   "id": "metallic-nightmare",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "valuable-efficiency",
+   "id": "lucky-socket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "infrared-highway",
+   "id": "joined-sweet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "productive-nevada",
+   "id": "wicked-device",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "balanced-protocol",
+   "id": "absent-painting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chicken-strip",
+   "id": "animal-machine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesbian-constant",
+   "id": "phantom-indonesian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "annual-idaho",
+   "id": "broken-gates",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hazardous-debate",
+   "id": "gross-sharp",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "large-chase",
+   "id": "intense-package",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
