--- a/imaging/virtual_imaging_4D_STEM_CPU.ipynb
+++ b/imaging/virtual_imaging_4D_STEM_CPU.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "popular-optimization",
+   "id": "regular-broadway",
    "metadata": {},
    "source": [
-    "<h2>Virtual Imaging Techniques for 4D-STEM data (GPU version)</h2>\n",
+    "<h2>Virtual Imaging Techniques for 4D-STEM data (CPU version)</h2>\n",
     "<strong>Jinseok Ryu, Ingyu Yoo<br></strong>\n",
     "<strong>Electron Microscopy and Spectroscopy Lab.<br></strong>\n",
     "<strong>Department of Materials Science and Engineering<br></strong>\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pressed-company",
+   "id": "musical-consolidation",
    "metadata": {
     "scrolled": true
    },
@@ -26,7 +26,6 @@
     "import numpy as np\n",
     "from scipy import optimize\n",
     "from scipy.ndimage import zoom\n",
-    "import torch\n",
     "\n",
     "class sstem_python():\n",
     "    \n",
@@ -38,15 +37,6 @@
     "        self.mrad_per_pixel = mrad_per_pixel\n",
     "        \n",
     "        print(\"the shape of the data =\", self.original_shape)\n",
-    "        \n",
-    "        if torch.cuda.is_available():\n",
-    "            print(\"%d gpu available\"%(torch.cuda.device_count()))\n",
-    "            self.cuda_device = torch.device(\"cuda:0\")\n",
-    "            print(torch.cuda.get_device_name(self.cuda_device))\n",
-    "            torch.cuda.set_device(self.cuda_device)\n",
-    "        else:\n",
-    "            print(\"there is no GPU available\")\n",
-    "            self.cuda_device = None\n",
     "    \n",
     "    def find_center(self, com=True, gaussian=False):\n",
     "        \n",
@@ -114,7 +104,7 @@
     "        for i in range(self.original_shape[0]):\n",
     "            for j in range(self.original_shape[1]):\n",
     "                tmp_dp = self.c_stack[i,j,:,:].copy()\n",
-    "                newdata = rotation(tmp_dp, self.c_ct, angle, resampling, torch_device=self.cuda_device)\n",
+    "                newdata = rotation(tmp_dp, self.c_ct, angle, resampling)\n",
     "                newdata = np.multiply(newdata, ri)\n",
     "                rotation_stack.append(newdata)\n",
     "                r_correl[i,j] = correlation(tmp_dp/np.max(tmp_dp), newdata)\n",
@@ -231,7 +221,7 @@
     "\n",
     "    return correlation[0]\n",
     "\n",
-    "def rotation(data, center, angle, resampling=1, torch_device=None):\n",
+    "def rotation(data, center, angle, resampling=1):\n",
     "    #Use crop image #Input : 2d data, angle(degree) /return : 2d data\n",
     "    newdata = np.zeros(data.shape)\n",
     "    center = np.array(center)\n",
@@ -253,15 +243,7 @@
     "    ones = ones[:, :, np.newaxis]\n",
     "    ind_stack = np.stack((y, x, ones), axis=2)\n",
     "    \n",
-    "    if torch_device != None:\n",
-    "        M = torch.from_numpy(M)\n",
-    "        M = M.to(torch_device)\n",
-    "        ind_stack = torch.from_numpy(ind_stack)\n",
-    "        ind_stack = ind_stack.to(torch_device)\n",
-    "    \n",
     "    transformed_ind = M @ ind_stack / resampling\n",
-    "    if torch_device != None:\n",
-    "        transformed_ind = transformed_ind.cpu().numpy()\n",
     "    transformed_ind = np.around(transformed_ind.squeeze()).astype(int)\n",
     "    transformed_ind = transformed_ind.reshape(-1, 2)\n",
     "    transformed_ind[np.where(transformed_ind>=np.min(newdata.shape))] = 0\n",
@@ -307,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "desirable-dealer",
+   "id": "inside-assets",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "finnish-accused",
+   "id": "incident-skating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nervous-saturday",
+   "id": "mediterranean-kelly",
    "metadata": {
     "scrolled": true
    },
@@ -348,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "progressive-blend",
+   "id": "flush-groove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "robust-research",
+   "id": "impressive-bottom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "listed-waterproof",
+   "id": "cross-starter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convinced-track",
+   "id": "unknown-ability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ordinary-token",
+   "id": "loved-creature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "integral-nutrition",
+   "id": "apparent-basket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,11 +462,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rough-ability",
+   "id": "corrected-charles",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotated_pacbed = rotation(test.c_pacbed, test.c_ct, test.c_theta*180/np.pi, 1.5)\n",
+    "rotated_pacbed = rotation(test.c_pacbed, test.c_ct, test.c_theta*180/np.pi, 2, torch_device=test.cuda_device)\n",
     "ri = radial_indices(test.c_pacbed.shape, [0, test.cropped_size], 1, center=test.c_ct)\n",
     "mirror_plane = np.zeros(rotated_pacbed.shape)\n",
     "mirror_plane[:, test.c_ct[1]] = 1\n",
@@ -502,13 +484,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "organizational-novelty",
+   "id": "binary-fantasy",
    "metadata": {},
    "outputs": [],
    "source": [
     "start = time.process_time()\n",
     "rot_angle = 45\n",
-    "rotated_stack, rot_sym_img, mir_sym_img = test.symmetry_evaluation(rot_angle, resampling=1.5, also_mirror=True)\n",
+    "rotated_stack, rot_sym_img, mir_sym_img = test.symmetry_evaluation(rot_angle, resampling=2, also_mirror=True)\n",
     "print(\"%d seconds have passed\"%(time.process_time()-start))\n",
     "f, a = plt.subplots(1,2, figsize=(10,5))\n",
     "a[0].imshow(rot_sym_img, cmap=\"afmhot\")\n",
@@ -523,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prescription-chassis",
+   "id": "grave-nursery",
    "metadata": {},
    "outputs": [],
    "source": [
