--- a/imaging/virtual_imaging_4D_STEM_CPU.ipynb
+++ b/imaging/virtual_imaging_4D_STEM_CPU.ipynb
@@ -490,7 +490,7 @@
    "source": [
     "start = time.process_time()\n",
     "rot_angle = 45\n",
-    "rotated_stack, rot_sym_img, mir_sym_img = test.symmetry_evaluation(rot_angle, resampling=2, also_mirror=True)\n",
+    "rotated_stack, rot_sym_img, mir_sym_img = test.symmetry_evaluation(rot_angle, resampling=1.5, also_mirror=True)\n",
     "print(\"%d seconds have passed\"%(time.process_time()-start))\n",
     "f, a = plt.subplots(1,2, figsize=(10,5))\n",
     "a[0].imshow(rot_sym_img, cmap=\"afmhot\")\n",
@@ -529,7 +529,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -543,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
