--- a/FEM/fem_analysis_comparison.ipynb
+++ b/FEM/fem_analysis_comparison.ipynb
@@ -49,18 +49,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#camera_length = 1.1462 # m\n",
-    "#pixel_size = 150E-6 # m\n",
-    "#mrad_per_pixel = np.arctan(pixel_size / camera_length) * 1000# mrad\n",
-    "mrad_per_pixel = 0.27045890769499215 # mrad\n",
+    "camera_length = 1.432 # m\n",
+    "pixel_size = 150E-6 # m\n",
+    "mrad_per_pixel = np.arctan(pixel_size / camera_length) * 1000# mrad\n",
+    "#mrad_per_pixel = 0.27045890769499215 # mrad\n",
     "print(mrad_per_pixel)\n",
-    "rel_lmb = 0.00197 # nm, relativistic wavelength for 300 kV\n",
+    "#rel_lmb = 0.00197 # nm, relativistic wavelength for 300 kV\n",
+    "rel_lmb = 0.00251 # nm, relativistic wavelength for 300 kV\n",
     "k_per_pixel = np.tan(mrad_per_pixel/1000) / rel_lmb# 1/nm\n",
     "print(k_per_pixel)\n",
-    "r_per_pixel = 0.440 # nm\n",
+    "r_per_pixel = 1.05 # nm\n",
     "\n",
-    "s_dim = 35\n",
-    "cb_rad = 10\n",
+    "s_dim = 70\n",
+    "cb_rad = 30\n",
     "k_list = np.arange(s_dim)\n",
     "print(k_list)"
    ]
@@ -216,26 +217,26 @@
    "source": [
     "%matplotlib qt\n",
     "\n",
-    "fig3, ax3 = plt.subplots(1, 4, figsize=(20, 6))\n",
+    "fig3, ax3 = plt.subplots(2, 2, figsize=(20, 6))\n",
     "row_label = [\"area (%)\", \"# of clusters (per 10000 nm^2)\", \"mean size (nm)\", \"largest size (nm)\", \"smallest size (nm)\"]\n",
     "\n",
     "def selector(k1, k2, binsize, m_sigma, m, e, split, n_img, save_option):\n",
     "    db = DBSCAN(eps=e, min_samples=m)\n",
     "    ind = num_img*(split-1)+n_img-1\n",
     "\n",
-    "    ax3[0].cla()\n",
-    "    ax3[1].cla()\n",
-    "    ax3[2].cla()\n",
-    "    ax3[3].cla()\n",
+    "    ax3[0][0].cla()\n",
+    "    ax3[0][1].cla()\n",
+    "    ax3[1][0].cla()\n",
+    "    ax3[1][1].cla()\n",
     "\n",
     "    \n",
     "    for i in range(num_split):\n",
-    "        ax3[0].plot(radial_var_split[i], color=color_rep[i+1], linestyle=\"-\", label=\"split %d\"%(i+1))\n",
+    "        ax3[0][0].plot(radial_var_split[i], color=color_rep[i+1], linestyle=\"-\", label=\"split %d\"%(i+1))\n",
     "    \n",
     "    flat = np.array(data_by_split[split-1][n_img-1])[:, :, k1:(k2+1)].flatten()\n",
     "    #binsize = int(0.005*len(flat))\n",
     "    #print(\"binning size (histogram) = %d\"%binsize)\n",
-    "    ax3[1].hist(flat, bins=binsize, color=color_rep[split], label=\"split %d\"%(split), histtype=\"step\")\n",
+    "    ax3[0][1].hist(flat, bins=binsize, color=color_rep[split], label=\"split %d\"%(split), histtype=\"step\")\n",
     "    \n",
     "    print(\"left k = %f\"%(k1*k_per_pixel))\n",
     "    print(\"right k = %f\"%(k2*k_per_pixel))\n",
@@ -247,18 +248,18 @@
     "    #zero_closest = np.argsort(np.square(second_order[:int(binsize/2)]))\n",
     "    extreme_point = np.argmin(grad)\n",
     "    \n",
-    "    ax3[1].plot(hist_edges, grad, \"k+\")\n",
-    "    ax3[1].plot(hist_edges, second_order, \"r-\")\n",
+    "    ax3[0][1].plot(hist_edges, grad, \"k+\")\n",
+    "    ax3[0][1].plot(hist_edges, second_order, \"r-\")\n",
     "    \n",
     "    v1 = np.mean(flat) + m_sigma * np.std(flat)\n",
     "    v2 = np.percentile(flat, 100)\n",
     "    \n",
-    "    ax3[0].fill_between([k1, k2], np.max(radial_var_split), alpha=0.5, color=\"orange\")\n",
-    "    ax3[0].grid()\n",
+    "    ax3[0][0].fill_between([k1, k2], np.max(radial_var_split), alpha=0.5, color=\"orange\")\n",
+    "    ax3[0][0].grid()\n",
     "    #ax3[0].legend(fontsize=\"xx-large\")\n",
     "    \n",
-    "    ax3[1].fill_between([v1, v2], ax3[1].get_ylim()[1], alpha=0.5, color=\"orange\")\n",
-    "    ax3[1].grid()\n",
+    "    ax3[0][1].fill_between([v1, v2], ax3[0][1].get_ylim()[1], alpha=0.5, color=\"orange\")\n",
+    "    ax3[0][1].grid()\n",
     "      \n",
     "    img = np.array(data_by_split[split-1][n_img-1])[:, :, k1:(k2+1)]\n",
     "    img[np.where(img < v1)] = 0\n",
@@ -266,9 +267,9 @@
     "    img[np.where(img != 0)] = 1\n",
     "    bool_img = np.sum(img, axis=2)\n",
     "    bool_img = np.divide(bool_img, np.where(bool_img!=0, bool_img, 1))\n",
-    "    ax3[2].imshow(bool_img, cmap=\"afmhot\")\n",
-    "    ax3[2].axis(\"off\")\n",
-    "    ax3[2].set_title(\"%.2f %%\"%(np.sum(bool_img)*100/(img.shape[0]*img.shape[1])))\n",
+    "    ax3[1][0].imshow(bool_img, cmap=\"afmhot\")\n",
+    "    ax3[1][0].axis(\"off\")\n",
+    "    ax3[1][0].set_title(\"%.2f %%\"%(np.sum(bool_img)*100/(img.shape[0]*img.shape[1])))\n",
     "        \n",
     "    sel_coor = np.nonzero(bool_img)\n",
     "    X = np.stack((sel_coor[0], sel_coor[1]), axis=1)\n",
@@ -280,8 +281,8 @@
     "    cluster_img = np.where(img_tmp<0, img_tmp, 1)\n",
     "    cluster_img = np.where(cluster_img>-1, bool_img, 0)\n",
     "    #ax3[3].set_title(\"split %d, image %d, epsilon=%.1f, min_#_of_samples=%d\"%(split, n_img, e, m), fontsize=10)\n",
-    "    ax3[3].imshow(cluster_img, cmap=\"afmhot\")\n",
-    "    ax3[3].axis(\"off\")\n",
+    "    ax3[1][1].imshow(cluster_img, cmap=\"afmhot\")\n",
+    "    ax3[1][1].axis(\"off\")\n",
     "    \n",
     "    area = np.around(100 * np.sum(cluster_img) / (img_tmp.shape[0]*img_tmp.shape[1]), decimals=2)\n",
     "    per_10000sqnm = 10000 / (img_tmp.shape[0]*img_tmp.shape[1]*r_per_pixel**2)\n",
@@ -606,7 +607,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -620,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
