--- a/FEM/fem_analysis_comparison.ipynb
+++ b/FEM/fem_analysis_comparison.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_split = 1\n",
+    "num_split = 2\n",
     "adr = []\n",
     "num_adr = []\n",
     "for i in range(num_split):\n",
@@ -50,18 +50,18 @@
    "outputs": [],
    "source": [
     "camera_length = 1.432 # m\n",
-    "pixel_size = 150E-6 # m\n",
+    "pixel_size = 150E-6 # m, EMPAD actual size\n",
     "mrad_per_pixel = np.arctan(pixel_size / camera_length) * 1000# mrad\n",
     "#mrad_per_pixel = 0.27045890769499215 # mrad\n",
     "print(mrad_per_pixel)\n",
     "#rel_lmb = 0.00197 # nm, relativistic wavelength for 300 kV\n",
-    "rel_lmb = 0.00251 # nm, relativistic wavelength for 300 kV\n",
-    "k_per_pixel = np.tan(mrad_per_pixel/1000) / rel_lmb# 1/nm\n",
+    "rel_lmb = 0.00251 # nm, relativistic wavelength for 200 kV\n",
+    "k_per_pixel = np.tan(mrad_per_pixel/1000) / rel_lmb # 1/nm\n",
     "print(k_per_pixel)\n",
     "r_per_pixel = 1.05 # nm\n",
     "\n",
     "s_dim = 70\n",
-    "cb_rad = 30\n",
+    "cb_rad = 10\n",
     "k_list = np.arange(s_dim)\n",
     "print(k_list)"
    ]
@@ -87,6 +87,7 @@
     "        if len(np.where(tmp[0, 0] == 0.0)[0]) != cb_rad:\n",
     "            tmp = np.insert(tmp, 0, 0, axis=2)        \n",
     "        \n",
+    "        tmp[:, :, :cb_rad] = 0.0\n",
     "        tmp = tmp[:, :, :s_dim]\n",
     "        print(tmp.shape)\n",
     "        temp.append(tmp)\n",
