--- a/imaging/virtual_imaging_4D_STEM_CPU.ipynb
+++ b/imaging/virtual_imaging_4D_STEM_CPU.ipynb
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BF_det = [0, 25]\n",
+    "BF_det = [0, 40]\n",
     "ADF_det = [50, 80]\n",
     "mrad_per_pixel = 1\n",
     "test.virtual_stem(BF_det, ADF_det)\n",
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotated_pacbed = rotation(test.c_pacbed, test.c_ct, test.c_theta*180/np.pi, 2, torch_device=test.cuda_device)\n",
+    "rotated_pacbed = rotation(test.c_pacbed, test.c_ct, test.c_theta*180/np.pi, 2, torch_device=None)\n",
     "ri = radial_indices(test.c_pacbed.shape, [0, test.cropped_size], 1, center=test.c_ct)\n",
     "mirror_plane = np.zeros(rotated_pacbed.shape)\n",
     "mirror_plane[:, test.c_ct[1]] = 1\n",
