--- a/imaging/virtual_imaging_4D_STEM_GPU.ipynb
+++ b/imaging/virtual_imaging_4D_STEM_GPU.ipynb
@@ -291,7 +291,7 @@
     "    zero_ind = np.where(k2 == 0.0)\n",
     "    k2[zero_ind] = 1.0\n",
     "\n",
-    "    FT_phase = (FT_ysh*ky + FT_xsh*kx) / (2*np.pi*1j*(hpass+k2) + lpass*k2)\n",
+    "    FT_phase = (FT_ysh*ky + FT_xsh*kx) / (2*np.pi*1j*(hpass+k2+lpass*k2))\n",
     "    FT_phase[zero_ind] = 0.0\n",
     "\n",
     "    Iicom = np.real(np.fft.ifftshift(np.fft.ifft2(np.fft.ifftshift(FT_phase))))\n",
