--- a/FEM/fem_analysis.ipynb
+++ b/FEM/fem_analysis.ipynb
@@ -1050,6 +1050,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "k_range = np.arange(25, 30, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "start_time = time.process_time()\n",
     "angular_corr_nor = []\n",
     "angular_corr_nonor = []\n",
@@ -1619,7 +1628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
